Revision history for Module::Provision

          - Adds xt to exclusion list. Markdown changed % encodes colons
          - Refactored coding style

0.42.1    2017-05-08 20:29:42
          - Adds whitelist t::boilerplate to share
          - CVE-2016-1238 adds inline sublass to Build.PL
          - Trace method will show selected env variables
          - Adds trace method to control environment variables
          - Boilerplate now also pattern matches hosts

0.41.1    2016-04-04 13:14:24
          - Setting LWP::Protocol::https version to 0
            Ten months RT#104150. Module abandoned?
          - Prereq diff remove section also shows version update
          - Can now run mp test release upload in that order
          - Fixed wrong quote char error in gitpre-commit
          - Added coverage server to badge output
          - Refactored smoker exceptions to dump file
          - Smarter changelog parsing in git hook
            Will not include this line
          - Fewer test dependencies in boilerplate
          - Added configuration options for remote testing
          - Include Travis integration in new distributions
          - Clear dist_version and module_metadata after update_version
          - Release can optionally push to remote and upload test and CPAN
          - Install dist on test server vi test-upload command
          - TraitFor::Badges sets requires and now even quieter
          - Allow dashes in changlog entries
          - Git commit hook no longer adding version tag to message
          - Adding version to tag message when releasing
          - Default tag message tense reflects why not what
          - Dropped support for Module::Install
          - Added Test::ReportMetaData to dist.ini and share/dist.ini
          - Deleted t/01always_pass.t
          - Added localdir config attr for M:P:TF:Debian

0.40.1    2015-06-08 22:46:08
          - Added our own MetaData::Provider since PPI is *so* slow
          - Updated toolchain