@@ -2,7 +2,7 @@ package Module::Provision;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.42.%d', q$Rev: 2 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.42.%d', q$Rev: 3 $ =~ /\d+/gmx );
 
 use Moo;
 
@@ -39,7 +39,7 @@ Module::Provision - Create Perl distributions with VCS and selectable toolchain
 
 =head1 Version
 
-This documents version v0.42.$Rev: 2 $ of L<Module::Provision>
+This documents version v0.42.$Rev: 3 $ of L<Module::Provision>
 
 =head1 Synopsis
 
