@@ -1,5 +1,6 @@
 Revision history for Module::Provision
 
+          - Added update-email method
           - Adds xt to exclusion list. Markdown changed % encodes colons
           - Refactored coding style
 
